--- a/menu/index.html
+++ b/menu/index.html
@@ -76,21 +76,21 @@
                         <h2 class="subheader ">Per Stuzzicare</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/peperoncini-e-pancetta.html">Peperoncini e pancetta<span class="right">5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/peperoncini-e-pancetta.html">Peperoncini e pancetta<span class="right">4</span></a></h3>    
                                 <p>Peperoncini piccanti avvolti nella pancetta</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/frittelle-di-capperi.html">Frittelle di capperi<span class="right">5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/frittelle-di-capperi.html">Frittelle di capperi<span class="right">3,5</span></a></h3>    
                                 <p>Uova e capperi in padella</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/asparagi-e-prosciutto.html">Asparagi e prosciutto<span class="right">5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/asparagi-e-prosciutto.html">Asparagi e prosciutto<span class="right">4</span></a></h3>    
                                 <p>Asparagi in sfoglia con prosciutto crudo</p>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/fritto-misto.html">Fritto Beerstrot<span class="right">5</span></a></h3>    
                                 <p>Fritto misto di verdure e formaggi</p>
-                            </li>
+                            </li> -->
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/salumi.html">Salumi<span class="right">9</span></a></h3>    
                                 <p>Prosciutto, Lonza, Ciauscolo, Salame, Coppa</p>
@@ -143,27 +143,31 @@
                         <h2 class="subheader">Hamburger <br><small>Piatto unico, servito con patate, insalata e fagioli. Pane di nostra produzione.</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/classico.html">Classico<span class="right">8,5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/classico.html">Classico<span class="right">7,5</span></a></h3>    
                                 <p>180 grammi di manzo, cipolla caramellata, insalata, fontina</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">9,5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8</span></a></h3>    
                                 <p>180 grammi di manzo, salsa piccante, pancetta, cheddar, rucola</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">9,5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,5</span></a></h3> 
                                 <p>180 grammi di manzo, pancetta, mozzarella di bufala, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/lamburger.html">Lamburger<span class="right">10</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/estivo.html">Estivo<span class="right">8,5</span></a></h3> 
+                                <p>180 grammi di manzo, pancetta, mozzarella di bufala, pomodorini confit</p>
+                            </li>
+                            <li>
+                                <h3><a href="http://beerstrot.it/menu/cibo/lamburger.html">Lamburger<span class="right">8.5</span></a></h3>    
                                 <p>180 grammi di agnello, fondo scuro, germogli di spinaci, salsa allo yogurt</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/nordico.html">Nordico<span class="right">13</span></a></h3>    
-                                <p>150 grammii di salmone, doppia panna, aneto, limone, rucola</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/nordico.html">Nordico<span class="right">10.5</span></a></h3>    
+                                <p>150 grammi di salmone, doppia panna, aneto, limone, rucola</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/ceci.html">Ceci<span class="right">7,5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/ceci.html">Ceci<span class="right">8</span></a></h3>    
                                 <p>150 grammi di ceci, composta leggermente piccante di verdure e menta, rucola</p>
                             </li>
                         </ul>                      
@@ -176,12 +180,12 @@
                         <h2 class="subheader">Carni <br></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/costine-di-maiale.html">Costine di maiale<span class="right">9,5</span></a></h3>    
-                                <p>10 costine di maiale in salsa barbeque</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/costine-di-maiale.html">Costine di maiale<span class="right">9</span></a></h3>    
+                                <p>Otto costine di maiale in salsa barbeque</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/chicken-wing.html">Chicken Wings<span class="right">9,5</span></a></h3>    
-                                <p>10 Alette di pollo servite con blu cheese</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/chicken-wing.html">Buffalo Chicken Wings<span class="right">9,5</span></a></h3>    
+                                <p>Otto Alette di pollo servite con blu cheese</p>
                             </li>
                         </ul>                      
                     </div>
