--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="panel-home-n">
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <h1>Menu</h1>
+                <h1>Menù</h1>
             </div>
         </div>
         <div class="row">
@@ -110,7 +110,7 @@
                 <a role="button" href="http://beerstrot.it/chi-siamo/"><img src="http://beerstrot.it/asset/img/medium/birreria-panorama.jpg" alt="" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-                <p>Tutto, ma proprio tutto su di noi. Chi siamo, la nostra storia, perchè esistiamo.</p>
+                <p>Tutto, ma proprio tutto, su di noi. Chi siamo, la nostra storia, perchè esistiamo.</p>
                 <p>Immagini e video dell'esperienza che vivi.</p>
                 <p>Cosa dicono gli altri di noi: recensioni e commenti.</p>
                 <a role="button" href="http://beerstrot.it/chi-siamo/">Scopri Chi Siamo &rarr;</a>
