--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-                <a role="button" href="http://beerstrot.it/chi-siamo/"><img src="http://beerstrot.it/asset/img/medium/birreria-panorama.jpg" alt="" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/chi-siamo/"><img src="http://beerstrot.it/asset/img/svgs/logo-completo.svg" alt="Logo Completo" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-                <p>Tutto, ma proprio tutto, su di noi. Chi siamo, la nostra storia, perchè esistiamo.</p>
+                <p>Tutto, ma proprio tutto, su di noi. Chi siamo, la nostra storia.</p>
                 <p>Immagini e video dell'esperienza che vivi.</p>
                 <p>Cosa dicono gli altri di noi: recensioni e commenti.</p>
                 <a role="button" href="http://beerstrot.it/chi-siamo/">Scopri Chi Siamo &rarr;</a>
@@ -125,7 +125,7 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.it/contatti/"><img src="http://beerstrot.it/asset/img/svgs/logo-completo.svg" alt="Logo Completo" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/contatti/"><img src="http://beerstrot.it/asset/img/medium/birreria-panorama.jpg" alt="Birreria Panorama" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
                 <p>Come raggiungerci, contattarci o prenotare un tavolo.</p>
