--- a/menu/cibo/costine-in-salsa-bbq.html
+++ b/menu/cibo/costine-in-salsa-bbq.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Peperoncini e Pancetta</title>
+    <title>Beerstrot | Costine in Salsa BBQ</title>
     <meta name="description" content="Peperoncini piccanti e pancetta. Forte e gentile. Un piatto piccante"/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
@@ -52,13 +52,13 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/peperoncini-e-pancetta.jpg" alt="Peperoncini e Pancetta"/>
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg" alt="Peperoncini e Pancetta"/>
     <div class="row">
         <aside class="medium-5 large-4 columns">
            <header>
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <h1>Peperoncini e Pancetta</h1>
+                        <h1>Costine in Salsa BBQ</h1>
                         <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 10 Aprile 2015</h6>
                         <h6 class="by-line">foto <a href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                     </div>
@@ -66,10 +66,10 @@
             </header>
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
-            <h2>Piccante, ma non troppo</h2>
-            <p>Peperoncini piccanti e pancetta, un piatto gustoso per gli amanti di cose saporite, ma delicate.</p>
-            <h2>Con cosa assaggiarla</h2>
-            <p>Gustalo assieme a <a href="http://beerstrot.it/menu/birra/ape-regina.html" target="_blank">Ape Regina</a>: una birra superba che smorza la piccantezza del peperoncino e risalta l'affumicato della pancetta.</p>  
+            <h2>Succose e Dolci</h2>
+            <p>Sei costine con una sottile crosta di salsa BBQ. SUccosissime e con un retrogusto leggermente dolce.</p>
+            <h2>Con cosa assaggiarle</h2>
+            <p>Gustale assieme a <a href="http://beerstrot.it/menu/birra/breaking-hops.html" target="_blank">Breaking Hops Double IPA</a>: una birra superba che pulisce la bocca dalla dolcezza della salsa BBQ e risalta il sapore della carne.</p>  
         </div>
     </div>
 <!-- fine articolo -->
@@ -83,13 +83,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="block-grid-social-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/birra/peperoncini-e-pancetta.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/birra/costine-in-salsa-bbq.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/birra/peperoncini-e-pancetta.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/birra/costine-in-salsa-bbq.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/birra/peperoncini-e-pancetta.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/birra/costine-in-salsa-bbq.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
