--- a/menu/index.html
+++ b/menu/index.html
@@ -180,7 +180,7 @@
                         <h2 class="subheader">Carni <br></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/costine-di-maiale.html">Costine di maiale<span class="right">9</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine in Salsa BBQ<span class="right">9</span></a></h3>    
                                 <p>Otto costine di maiale in salsa barbeque</p>
                             </li>
                             <li>
