--- a/menu/cibo/costine-in-salsa-bbq.html
+++ b/menu/cibo/costine-in-salsa-bbq.html
@@ -5,21 +5,21 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Costine in Salsa BBQ</title>
-    <meta name="description" content="Peperoncini piccanti e pancetta. Forte e gentile. Un piatto piccante"/>
+    <meta name="description" content="Sei costine con una sottile crosta di salsa BBQ. Succoe e con un retrogusto leggermente dolce."/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Peperoncini e Pancetta"/>
-    <meta name="twitter:description" content="Peperoncini piccanti e pancetta. Forte e gentile. Un piatto piccante."/>
-    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/peperoncini-e-pancetta.jpg"/>
-    <meta name="twitter:url" content="http://beerstrot.it/menu/birra/peperoncini-e-pancetta.html"/>
-    <meta property="og:url" content="http://beerstrot.it/menu/birra/peperoncini-e-pancetta.html"/>
+    <meta name="twitter:title" content="Costine in Salsa BBQ"/>
+    <meta name="twitter:description" content="Sei costine con una sottile crosta di salsa BBQ. Succoe e con un retrogusto leggermente dolce."/>
+    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg"/>
+    <meta name="twitter:url" content="http://beerstrot.it/menu/birra/costine-in-salsa-bbq.html"/>
+    <meta property="og:url" content="http://beerstrot.it/menu/birra/costine-in-salsa-bbq.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Peperoncini e Pancetta"/>
-    <meta property="og:description" content="Peperoncini piccanti e pancetta. Forte e gentile. Un piatto piccante."/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/peperoncini-e-pancetta.jpg"/>
-    <link rel="canonical" href="http://beerstrot.it/menu/birra/peperoncini-e-pancetta.html"/>
+    <meta property="og:title" content="Costine in Salsa BBQ"/>
+    <meta property="og:description" content="Sei costine con una sottile crosta di salsa BBQ. Succoe e con un retrogusto leggermente dolce."/>
+    <meta property="og:image" content="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg"/>
+    <link rel="canonical" href="http://beerstrot.it/menu/birra/costine-in-salsa-bbq.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -52,7 +52,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg" alt="Peperoncini e Pancetta"/>
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg" alt="Costine in Salsa BBQ"/>
     <div class="row">
         <aside class="medium-5 large-4 columns">
            <header>
@@ -67,7 +67,7 @@
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
             <h2>Succose e Dolci</h2>
-            <p>Sei costine con una sottile crosta di salsa BBQ. SUccosissime e con un retrogusto leggermente dolce.</p>
+            <p>Sei costine con una sottile crosta di salsa BBQ. Succoe e con un retrogusto leggermente dolce.</p>
             <h2>Con cosa assaggiarle</h2>
             <p>Gustale assieme a <a href="http://beerstrot.it/menu/birra/breaking-hops.html" target="_blank">Breaking Hops Double IPA</a>: una birra superba che pulisce la bocca dalla dolcezza della salsa BBQ e risalta il sapore della carne.</p>  
         </div>
@@ -102,7 +102,7 @@
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="http://beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
-                <a href="http://beerstrot.it/menu/frittelle-di-capperi.html" class="right">Frittelle di capperi &rarr;</a>
+                <a href="http://beerstrot.it/menu/buffalo-chicken-wings.html" class="right">Buffalo Chicken Wings &rarr;</a>
             </div>
         </div> 
     </div>
