--- a/menu/cibo/costine-in-salsa-bbq.html
+++ b/menu/cibo/costine-in-salsa-bbq.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Costine in Salsa BBQ</title>
-    <meta name="description" content="Sei costine con una sottile crosta di salsa BBQ. Succoe e con un retrogusto leggermente dolce."/>
+    <meta name="description" content="Otto costine con una sottile crosta di salsa BBQ. Succoe e con un retrogusto leggermente dolce."/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Costine in Salsa BBQ"/>
-    <meta name="twitter:description" content="Sei costine con una sottile crosta di salsa BBQ. Succoe e con un retrogusto leggermente dolce."/>
+    <meta name="twitter:description" content="Otto costine con una sottile crosta di salsa BBQ. Succoe e con un retrogusto leggermente dolce."/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html"/>
     <meta property="og:url" content="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Costine in Salsa BBQ"/>
-    <meta property="og:description" content="Sei costine con una sottile crosta di salsa BBQ. Succoe e con un retrogusto leggermente dolce."/>
+    <meta property="og:description" content="Otto costine con una sottile crosta di salsa BBQ. Succoe e con un retrogusto leggermente dolce."/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg"/>
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
@@ -67,7 +67,7 @@
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
             <h2>Succose e Dolci</h2>
-            <p>Sei costine con una sottile crosta di salsa BBQ. Succoe e con un retrogusto leggermente dolce.</p>
+            <p>Otto costine con una sottile crosta di salsa BBQ. Succoe e con un retrogusto leggermente dolce.</p>
             <h2>Con cosa assaggiarle</h2>
             <p>Gustale assieme a <a href="http://beerstrot.it/menu/birra/breaking-hops.html" target="_blank">Breaking Hops Double IPA</a>: una birra superba che pulisce la bocca dalla dolcezza della salsa BBQ e risalta il sapore della carne.</p>  
         </div>
