--- a/menu/birra/brealing-hops-double-ipa.html
+++ b/menu/birra/brealing-hops-double-ipa.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Costine in Salsa BBQ</title>
-    <meta name="description" content="Otto costine con una sottile crosta di salsa BBQ. Succose e con un retrogusto leggermente dolce."/>
+    <title>Beerstrot | Birrificio MC-77 | Breaking Hops Double IPA</title>
+    <meta name="description" content="Blonde Ale di ispirazione belga con aggiunta di miele di acacia. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Costine in Salsa BBQ"/>
-    <meta name="twitter:description" content="Otto costine con una sottile crosta di salsa BBQ. Succose e con un retrogusto leggermente dolce."/>
-    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg"/>
-    <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html"/>
-    <meta property="og:url" content="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html"/>
+    <meta name="twitter:title" content="Birra Ape Regina"/>
+    <meta name="twitter:description" content="Blonde Ale di ispirazione belga con aggiunta di miele di acacia. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
+    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/ape-regina.jpg"/>
+    <meta name="twitter:url" content="http://beerstrot.it/menu/birra/ape-regina.html"/>
+    <meta property="og:url" content="http://beerstrot.it/menu/birra/ape-regina.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Costine in Salsa BBQ"/>
-    <meta property="og:description" content="Otto costine con una sottile crosta di salsa BBQ. Succose e con un retrogusto leggermente dolce."/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg"/>
-    <link rel="canonical" href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html"/>
+    <meta property="og:title" content="Dall'America alle Marche"/>
+    <meta property="og:description" content="Blonde Ale di ispirazione belga con aggiunta di miele di acacia. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
+    <meta property="og:image" content="http://beerstrot.it/asset/img/large/ape-regina.jpg"/>
+    <link rel="canonical" href="http://beerstrot.it/menu/birra/ape-regina.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -52,24 +52,35 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg" alt="Costine in Salsa BBQ"/>
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/ape-regina.jpg" alt="Birra Ape Regina"/>
     <div class="row">
         <aside class="medium-5 large-4 columns">
            <header>
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <h1>Costine in Salsa BBQ</h1>
+                        <h1>Breaking Hops Double IPA</h1>
                         <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 10 Aprile 2015</h6>
-                        <h6 class="by-line">foto <a href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
+                            <h6 class="by-line">Foto <a href="http://www.mc-77.com/" target="_blank">Birrificio MC-77</a></h6>
+                        <div class="share-block">
+                            <h6 class="by-line" ><span data-tooltip aria-haspopup="true" class="has-tip" title="% di alcool in volume.">ABV:</span> 7,2% | <span data-tooltip aria-haspopup="true" class="has-tip" title="Misura dell'amaro. Da 0-non amaro a 100-amaro. l’IBU non indica in assoluto l’amarezza della birra: nelle birre con più corpo, a un alto IBU corrisponde una maggiore quantità di malto, per bilanciare il gusto.">IBU's:</span> </h6>
+                            <h6 class="by-line">COLORE: Dorato | SAPORE: Dolce/Amaro</h6>
+                            <h6 class="by-line">MALTO: | LUPPOLO: </h6>
+                        </div>
                     </div>
                 </div>
             </header>
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
-            <h2>Succose e Dolci</h2>
-            <p>Otto costine con una sottile crosta di salsa BBQ. Succose e con un retrogusto leggermente dolce.</p>
-            <h2>Con cosa assaggiarle</h2>
-            <p>Gustale assieme a <a href="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html" target="_blank">Breaking Hops Double IPA</a>: una birra superba che pulisce la bocca dalla dolcezza della salsa BBQ e risalta il sapore della carne.</p>  
+            <h2>Divina e dorata</h2>
+            <p>Blonde Ale di ispirazione belga con aggiunta di miele di acacia.</p>
+            <p>Il profumo dolce di miele si unisce ai componenti aromatici fruttati e speziati donati dal lievito. In bocca è morbida e maltata, la leggera luppolatura ne bilancia il gusto. Il corpo strutturato accompagna il tenore alcolico e ne risulta una birra dal retrogusto persistente.</p>
+            <blockquote>
+                <p>Seduce, d'oro vestita e dolce di miele questo è un lato della questione ... l'altro, amico mio, è che appena nata uccide perché vuole essere l'unica.. Ciò che comincia dolce finisce amaro e ciò che comincia amaro finisce dolce. Lei sola e madre di tutte, lei: Ape Regina.
+                <cite>Birrificio MC-77</cite>
+                 </p>
+            </blockquote>
+            <h2>Con cosa assaggiarla</h2>
+            <p>Ideale per formaggi extra stagionati.</p>  
         </div>
     </div>
 <!-- fine articolo -->
@@ -83,13 +94,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="block-grid-social-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/birra/costine-in-salsa-bbq.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/birra/ape-regina.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/birra/costine-in-salsa-bbq.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/birra/ape-regina.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/birra/costine-in-salsa-bbq.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/birra/ape-regina.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -101,8 +112,8 @@
     <div class="row">
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
-                <a href="http://beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
-                <a href="http://beerstrot.it/menu/buffalo-chicken-wings.html" class="right">Buffalo Chicken Wings &rarr;</a>
+                <a href="http://beerstrot.it/menu/#fndtn-birra" class="left">&larr; Torna al menu</a>
+                <a href="menu-Beerstrot-quintupla-ipa.html" class="right">Quintupla IPA &rarr;</a>
             </div>
         </div> 
     </div>
