--- a/menu/index.html
+++ b/menu/index.html
@@ -259,12 +259,12 @@
                                 <p>Birrificio MC77. Divina e dorata</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right"> 5 | 3</span></a></h3>
-                                <p>Birrificio xxxx. Rossa</p>
+                                <h3><a href="http://beerstrot.it/menu/birra/brealing-hops-double-ipa.html">Breaking Hops Double IPA<span class="right"> 5 | 3</span></a></h3>
+                                <p>Birrificio MC77. Ambrata e amara</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Birra del mese<span class="right"> 6 | 3.5</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <p>Ve lo diciamo quando troviamo la Pills che davvero amiamo</p>
                             </li>
                         </ul>
                     </div>
