--- a/menu/index.html
+++ b/menu/index.html
@@ -77,7 +77,7 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/peperoncini-e-pancetta.html">Peperoncini e pancetta<span class="right">4</span></a></h3>    
-                                <p>Peperoncini piccanti avvolti nella pancetta</p>
+                                <p>Quattro peperoncini piccanti avvolti nella pancetta</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/frittelle-di-capperi.html">Frittelle di capperi<span class="right">3,5</span></a></h3>    
@@ -85,7 +85,7 @@
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/asparagi-e-prosciutto.html">Asparagi e prosciutto<span class="right">4</span></a></h3>    
-                                <p>Asparagi in sfoglia con prosciutto crudo</p>
+                                <p>Due asparagi in sfoglia con prosciutto crudo</p>
                             </li>
                             <!-- <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/fritto-misto.html">Fritto Beerstrot<span class="right">5</span></a></h3>    
@@ -197,19 +197,19 @@
                         <h2 class="subheader">Contorni</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">4</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">3</span></a></h3>    
                                 <p>Patate fritte tagliate a mano con la buccia</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate arrosto<span class="right">4</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate arrosto<span class="right">3,5</span></a></h3>    
                                 <p>Patate cotte al forno con aglio e rosmarino</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/fagiolini-al-rosmarino.html">Fagioli al rosmarino<span class="right">4</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/fagiolini-al-rosmarino.html">Fagioli al rosmarino<span class="right">2,5</span></a></h3>    
                                 <p>Fagioli cannellini saltati al rosmarino</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/verdure-grigliate.html">Verdure grigliate<span class="right">5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/verdure-grigliate.html">Verdure grigliate<span class="right">3</span></a></h3>    
                                 <p>Verdure grigliate di stagione</p>
                             </li>
                             <li>
@@ -252,7 +252,7 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/birra/tropicale.html">Tropical Ale<span class="right"> 3,5 | 5,5</span></a></h3>
-                                <p>Birrificio Emiliano. Chiara Amara</p>
+                                <p>Birrificio Emiliano. Ambrata amara</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Ape Regina<span class="right"> 3,5 | 5,5</span></a></h3>
@@ -260,11 +260,11 @@
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/birra/brealing-hops-double-ipa.html">Breaking Hops Double IPA<span class="right"> 4 | 6</span></a></h3>
-                                <p>Birrificio MC77. Ambrata e amara</p>
+                                <p>Birrificio MC77. Ambrata e amarissima</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Birra del mese<span class="right"> 6 | 3.5</span></a></h3>
-                                <p>Ve lo diciamo quando troviamo la Pills che davvero amiamo</p>
+                                <p>Ve lo diciamo quando troviamo la Pils che davvero amiamo</p>
                             </li>
                         </ul>
                     </div>
