--- a/menu/index.html
+++ b/menu/index.html
@@ -80,7 +80,7 @@
                                 <p>Quattro peperoncini piccanti avvolti nella pancetta</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/frittelle-di-capperi.html">Frittelle di capperi<span class="right">3,5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/frittelle-di-capperi.html">Quattro frittelle di capperi<span class="right">3,5</span></a></h3>    
                                 <p>Uova e capperi in padella</p>
                             </li>
                             <li>
