--- a/menu/index.html
+++ b/menu/index.html
@@ -185,7 +185,7 @@
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/buffalo-chicken-wing.html">Buffalo Chicken Wings<span class="right">9,5</span></a></h3>    
-                                <p>Otto Alette di pollo servite con blu cheese</p>
+                                <p>Otto alette di pollo servite con blu cheese</p>
                             </li>
                         </ul>                      
                     </div>
