--- a/menu/index.html
+++ b/menu/index.html
@@ -77,15 +77,15 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/peperoncini-e-pancetta.html">Peperoncini e pancetta<span class="right">4</span></a></h3>    
-                                <p>Quattro peperoncini piccanti avvolti nella pancetta</p>
+                                <p>Peperoncini piccanti avvolti nella pancetta</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/frittelle-di-capperi.html">Quattro frittelle di capperi<span class="right">3,5</span></a></h3>    
-                                <p>Uova e capperi in padella</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/frittelle-di-capperi.html">Frittelle di capperi<span class="right">3,5</span></a></h3>    
+                                <p>Capperi in abbondandte sfoglia di tempura</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/asparagi-e-prosciutto.html">Asparagi e prosciutto<span class="right">4</span></a></h3>    
-                                <p>Due asparagi in sfoglia con prosciutto crudo</p>
+                                <p>Asparagi in sfoglia con prosciutto crudo</p>
                             </li>
                             <!-- <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/fritto-misto.html">Fritto Beerstrot<span class="right">5</span></a></h3>    
@@ -155,11 +155,11 @@
                                 <p>180 grammi di manzo, pancetta, mozzarella di bufala, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/estivo.html">Estivo<span class="right">8,5</span></a></h3> 
-                                <p>180 grammi di manzo, pancetta, mozzarella di bufala, pomodorini confit</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/estivo.html">Estivo<span class="right">8</span></a></h3> 
+                                <p>180 grammi di manzo, melanzane, pomodori, formaggio di capra, rucola</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/lamburger.html">Lamburger<span class="right">8.5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/lamburger.html">Lamb<span class="right">8.5</span></a></h3>    
                                 <p>180 grammi di agnello, fondo scuro, germogli di spinaci, salsa allo yogurt</p>
                             </li>
                             <li>
@@ -181,11 +181,11 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine in Salsa BBQ<span class="right">9</span></a></h3>    
-                                <p>Otto costine di maiale in salsa barbeque</p>
+                                <p>Costine di maiale in salsa barbeque</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/buffalo-chicken-wing.html">Buffalo Chicken Wings<span class="right">9,5</span></a></h3>    
-                                <p>Otto alette di pollo servite con blu cheese</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/buffalo-chicken-wing.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
+                                <p>Alette di pollo servite con blu cheese</p>
                             </li>
                         </ul>                      
                     </div>
