--- a/menu/index.html
+++ b/menu/index.html
@@ -76,12 +76,12 @@
                         <h2 class="subheader ">Per Stuzzicare</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/peperoncini-e-pancetta.html">Peperoncini e pancetta<span class="right">4</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/peperoncini-e-pancetta.html">Peperoncini e pancetta<span class="right">4,5</span></a></h3>    
                                 <p>Peperoncini piccanti avvolti nella pancetta</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/frittelle-di-capperi.html">Frittelle di capperi<span class="right">3,5</span></a></h3>    
-                                <p>Capperi in abbondandte sfoglia di tempura</p>
+                                <p>Capperi in fragrante tempura</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/asparagi-e-prosciutto.html">Asparagi e prosciutto<span class="right">4</span></a></h3>    
@@ -164,7 +164,7 @@
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/nordico.html">Nordico<span class="right">10.5</span></a></h3>    
-                                <p>150 grammi di salmone, doppia panna, aneto, limone, rucola</p>
+                                <p>180 grammi di salmone, doppia panna, aneto, limone, rucola</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/ceci.html">Ceci<span class="right">8</span></a></h3>    
@@ -209,11 +209,11 @@
                                 <p>Fagioli cannellini saltati al rosmarino</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/verdure-grigliate.html">Verdure grigliate<span class="right">3</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/verdure-grigliate.html">Verdure grigliate<span class="right">3,5</span></a></h3>    
                                 <p>Verdure grigliate di stagione</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/verdure-fresche.html">Verdure fresche<span class="right">4</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/verdure-fresche.html">Verdure fresche<span class="right">3</span></a></h3>    
                                 <p>Verdure fresche di stagione</p>
                             </li>
                         </ul>
