--- a/menu/birra/brealing-hops-double-ipa.html
+++ b/menu/birra/brealing-hops-double-ipa.html
@@ -72,15 +72,10 @@
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
             <h2>Divina e dorata</h2>
-            <p>Blonde Ale di ispirazione belga con aggiunta di miele di acacia.</p>
-            <p>Il profumo dolce di miele si unisce ai componenti aromatici fruttati e speziati donati dal lievito. In bocca è morbida e maltata, la leggera luppolatura ne bilancia il gusto. Il corpo strutturato accompagna il tenore alcolico e ne risulta una birra dal retrogusto persistente.</p>
-            <blockquote>
-                <p>Seduce, d'oro vestita e dolce di miele questo è un lato della questione ... l'altro, amico mio, è che appena nata uccide perché vuole essere l'unica.. Ciò che comincia dolce finisce amaro e ciò che comincia amaro finisce dolce. Lei sola e madre di tutte, lei: Ape Regina.
-                <cite>Birrificio MC-77</cite>
-                 </p>
-            </blockquote>
+            <p>Birra leggermente ambrata, in stile double IPA. La frutta esotica e l'amaro dei luppoli americani e neo-zelandesi dominano prepotenti il gusto persistente di questa birra.</p>
+            <p>Finale lungo e amaro.</p>
             <h2>Con cosa assaggiarla</h2>
-            <p>Ideale per formaggi extra stagionati.</p>  
+            <p>Ideale con <a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html" target="_blank">Costine in salsa BBQ</a></p>  
         </div>
     </div>
 <!-- fine articolo -->
