--- a/menu/index.html
+++ b/menu/index.html
@@ -143,7 +143,7 @@
                         <h2 class="subheader">Hamburger <br><small>Piatto unico, servito con patate, insalata e fagioli. Pane di nostra produzione.</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/classico.html">Classico<span class="right">7,5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/classico.html">New York<span class="right">7,5</span></a></h3>    
                                 <p>180 grammi di manzo, cipolla caramellata, insalata, fontina</p>
                             </li>
                             <li>
@@ -167,7 +167,7 @@
                                 <p>180 grammi di salmone, doppia panna, aneto, limone, rucola</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/ceci.html">Ceci<span class="right">8</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/ceci.html">Cecilia<span class="right">8</span></a></h3>    
                                 <p>150 grammi di ceci, composta leggermente piccante di verdure e menta, rucola</p>
                             </li>
                         </ul>                      
@@ -226,12 +226,12 @@
                         <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/beeramisu.html">Beeramisu<span class="right">7</span></a></h3>
+                                <h3><a href="http://beerstrot.it/menu/cibo/beeramisu.html">Beeramisù<span class="right">7</span></a></h3>
                                 <p>Tiramisù alla birra IPA</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/cheescake.html">Cheescake<span class="right">7</span></a></h3>
-                                <p>Cheescake stile New York. Vari gusti in base alla frutta di stagione</p>
+                                <p>Cheescake stile New York, con gelatina alla birra stout.</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/verdure-fresche.html">Torta pere e cioccolato<span class="right">7</span></a></h3>
@@ -252,7 +252,7 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/birra/tropicale.html">Tropical Ale<span class="right"> 3,5 | 5,5</span></a></h3>
-                                <p>Birrificio Emiliano. Ambrata amara</p>
+                                <p>Birrificio Emiliano. Ambrata e amara</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Ape Regina<span class="right"> 3,5 | 5,5</span></a></h3>
