--- a/menu/birra/ape-regina.html
+++ b/menu/birra/ape-regina.html
@@ -16,7 +16,7 @@
     <meta name="twitter:url" content="http://beerstrot.it/menu/birra/ape-regina.html"/>
     <meta property="og:url" content="http://beerstrot.it/menu/birra/ape-regina.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Dall'America alle Marche"/>
+    <meta property="og:title" content="Birra Ape Regina"/>
     <meta property="og:description" content="Blonde Ale di ispirazione belga con aggiunta di miele di acacia. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/ape-regina.jpg"/>
     <link rel="canonical" href="http://beerstrot.it/menu/birra/ape-regina.html"/>
@@ -113,7 +113,7 @@
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="http://beerstrot.it/menu/#fndtn-birra" class="left">&larr; Torna al menu</a>
-                <a href="menu-Beerstrot-quintupla-ipa.html" class="right">Quintupla IPA &rarr;</a>
+                <a href="http://beerstrot.it//menu/birra/breaking-hops-double-ipa.html" class="right">Breaking Hops Double IPA &rarr;</a>
             </div>
         </div> 
     </div>
