--- a/menu/birra/breaking-hops-double-ipa.html
+++ b/menu/birra/breaking-hops-double-ipa.html
@@ -5,21 +5,21 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Birrificio MC-77 | Breaking Hops Double IPA</title>
-    <meta name="description" content="Blonde Ale di ispirazione belga con aggiunta di miele di acacia. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
+    <meta name="description" content="Birra ambrata, in stile double IPA. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Birra Ape Regina"/>
-    <meta name="twitter:description" content="Blonde Ale di ispirazione belga con aggiunta di miele di acacia. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
-    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/ape-regina.jpg"/>
-    <meta name="twitter:url" content="http://beerstrot.it/menu/birra/ape-regina.html"/>
-    <meta property="og:url" content="http://beerstrot.it/menu/birra/ape-regina.html"/>
+    <meta name="twitter:title" content="Birra Breaking Hops Double IPA"/>
+    <meta name="twitter:description" content="Birra ambrata, in stile double IPA. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
+    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/breaking-hops-double-ipa.jpg"/>
+    <meta name="twitter:url" content="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html"/>
+    <meta property="og:url" content="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Dall'America alle Marche"/>
-    <meta property="og:description" content="Blonde Ale di ispirazione belga con aggiunta di miele di acacia. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
+    <meta property="og:title" content="Birra Breaking Hops Double IPA"/>
+    <meta property="og:description" content="Birra ambrata, in stile double IPA. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/ape-regina.jpg"/>
-    <link rel="canonical" href="http://beerstrot.it/menu/birra/ape-regina.html"/>
+    <link rel="canonical" href="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -52,7 +52,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/ape-regina.jpg" alt="Birra Ape Regina"/>
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/breaking-hops-double-ipa.jpg" alt="Birra Breaking Hops Double IPA"/>
     <div class="row">
         <aside class="medium-5 large-4 columns">
            <header>
@@ -62,17 +62,17 @@
                         <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 10 Aprile 2015</h6>
                             <h6 class="by-line">Foto <a href="http://www.mc-77.com/" target="_blank">Birrificio MC-77</a></h6>
                         <div class="share-block">
-                            <h6 class="by-line" ><span data-tooltip aria-haspopup="true" class="has-tip" title="% di alcool in volume.">ABV:</span> 7,2% | <span data-tooltip aria-haspopup="true" class="has-tip" title="Misura dell'amaro. Da 0-non amaro a 100-amaro. l’IBU non indica in assoluto l’amarezza della birra: nelle birre con più corpo, a un alto IBU corrisponde una maggiore quantità di malto, per bilanciare il gusto.">IBU's:</span> </h6>
-                            <h6 class="by-line">COLORE: Dorato | SAPORE: Dolce/Amaro</h6>
-                            <h6 class="by-line">MALTO: | LUPPOLO: </h6>
+                            <h6 class="by-line" ><span data-tooltip aria-haspopup="true" class="has-tip" title="% di alcool in volume.">ABV:</span> 7,9% | <span data-tooltip aria-haspopup="true" class="has-tip" title="Misura dell'amaro. Da 0-non amaro a 100-amaro. l’IBU non indica in assoluto l’amarezza della birra: nelle birre con più corpo, a un alto IBU corrisponde una maggiore quantità di malto, per bilanciare il gusto.">IBU's:</span> </h6>
+                            <h6 class="by-line">COLORE: Dorato | SAPORE: Amaro</h6>
+                            <h6 class="by-line">MALTO: | LUPPOLO: USA, Nuova Zelanda </h6>
                         </div>
                     </div>
                 </div>
             </header>
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
-            <h2>Divina e dorata</h2>
-            <p>Birra leggermente ambrata, in stile double IPA. La frutta esotica e l'amaro dei luppoli americani e neo-zelandesi dominano prepotenti il gusto persistente di questa birra.</p>
+            <h2>Intensamente amara</h2>
+            <p>Birra ambrata, in stile double IPA. La frutta esotica e l'amaro dei luppoli americani e neo-zelandesi dominano prepotenti il gusto persistente di questa birra.</p>
             <p>Finale lungo e amaro.</p>
             <h2>Con cosa assaggiarla</h2>
             <p>Ideale con <a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html" target="_blank">Costine in salsa BBQ</a></p>  
@@ -89,13 +89,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="block-grid-social-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/birra/ape-regina.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/birra/ape-regina.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/birra/ape-regina.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
